syntax = "proto3";
package roomservice;
option java_package = "app.funfinder.protobuf";
option java_outer_classname = "RoomServiceProto";

message CreateRoomRequest {
  string room_name = 1;
  repeated string hashtags = 2;
  repeated string languages = 3;
  int64 latitude = 4;
  int64 longitude = 5;
  string user_id = 6;
}

message DeleteRoomRequest {
  string room_id = 1;
}

message JoinRoomRequest {
  string user_id = 1;
  string room_id = 2;
}

message LeaveRoomRequest {
  string user_id = 1;
  string room_id = 2;
}